Another day, another few sections

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -22,6 +22,8 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
 
     \hline
 
+    JIT & Just In Time & \ref{sec:visualisation} \\
+
   \end{tabular} 
   \label{tbl:Abbreviations}
 \end{table}
