--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -19,6 +19,7 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   $h_e$ & Electron transparency & Section \ref{sec:wcrcooling} \\
   $H_{coll}$ & Grain heating rate due to ions & \\
   $H_{el}$ & Grain heating rate due to electrons & \\
+  $i$ & Inclination & \\
   $L_*$ & Stellar luminosity & \\
   $M_*$ & Stellar mass & \\
   $\dot M$ & Mass loss rate & \\
