--- a/References/library.bib
+++ b/References/library.bib
@@ -9,6 +9,15 @@
   keywords = {software}
 }
 
+@book{10.5555/1593511,
+  title = {Python 3 Reference Manual},
+  author = {Van Rossum, Guido and Drake, Fred L.},
+  year = {2009},
+  publisher = {{CreateSpace}},
+  address = {{Scotts Valley, CA}},
+  isbn = {1-4414-1269-7}
+}
+
 @article{1982ApJ...259..282A,
   title = {The Theory of Radiatively Driven Stellar Winds. {{II}}. {{The}} Line Acceleration.},
   author = {Abbott, D. C.},
@@ -314,6 +323,21 @@
   isbn = {978-1-4920-5259-3},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/GCTIC3AA/Blandy et al. - 2021 - Programming Rust Fast, Safe Systems Development.pdf}
+}
+
+@article{blootRadioModellingBrightest2021,
+  title = {Radio Modelling of the Brightest and Most Luminous Non-Thermal Colliding-Wind Binary {{Apep}}},
+  author = {Bloot, S and Callingham, J R and Marcote, B},
+  year = {2021},
+  month = jan,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {509},
+  number = {1},
+  pages = {475--488},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stab2976},
+  abstract = {Apep is the brightest and most luminous non-thermal colliding-wind binary by over an order of magnitude. It has been suggested from infrared observations that one of the Wolf\textendash Rayet stars in Apep is launching an anisotropic wind. Here we present radio observations of Apep from 0.2 to 20\,GHz taken over 33~yr. The spectrum reveals an extremely steep turnover in the flux density at low frequencies, where the flux density decreases by two orders of magnitude over only 325\,MHz of bandwidth. This exponential decline is best described by free\textendash free absorption, with a turnover frequency at 0.54~{$\pm$} 0.01\,GHz. Above the turnover, the spectrum is well described by a power-law and a high-frequency cut-off likely caused by inverse-Compton cooling. The light curve of Apep shows significant variation over the observing period, with Apep brightening by over 50\,mJy in a span of 25~yr at 1.4\,GHz. Models that assume spherical winds do not replicate all of the structure evident in the radio light curve. We derived a model that allows one of the winds in the system to be anisotropic. This anisotropic model recovers most of the structure of the light curve and is a significantly better statistical fit to the data than the spherical wind model. We suggest such a result is independent support that one of the Wolf\textendash Rayet stars in Apep is launching an anisotropic wind. If the anisotropic wind model is correct, we predict a {$\sim$}25~per~cent decrease of the 1.4\,GHz flux density of Apep over the next 5 yr.},
+  file = {/Users/py13je/Zotero/storage/6W979WL3/Bloot et al. - 2021 - Radio modelling of the brightest and most luminous.pdf;/Users/py13je/Zotero/storage/AK6Y9LNI/6400117.html}
 }
 
 @article{bonnell_formation_nodate,
@@ -674,6 +698,20 @@
   file = {/Users/py13je/Zotero/storage/VRZ6B3WJ/Daly et al. - 2021 - The long-period orbit of the dust-producing Wolf-R.pdf;/Users/py13je/Zotero/storage/DQEWFPPX/1.html}
 }
 
+@article{danksInfraredSpectroscopyInfrared1983,
+  title = {Near Infrared Spectroscopy and Infrared Photometry of a New {{WC9}} Star.},
+  author = {Danks, A. C. and Dennefeld, M. and Wamsteker, W. and Shaver, P. A.},
+  year = {1983},
+  month = feb,
+  journal = {Astronomy and Astrophysics},
+  volume = {118},
+  pages = {301--305},
+  issn = {0004-6361},
+  abstract = {The discovery of a new WC9 star is reported. The star is situated in the Centaurus link at a distance of {$\cong$}4 kpc and is possibly associated with two newly discovered Galactic clusters C 1309-624 and C 1310-624. The star exhibits characteristics very similar to Ve 2-45: strong infrared excess due to a 1300K BB circumstellar dust shell, an (H-K)\textsubscript{obs} index {$\cong$}2.1 and a total extinction A\textsubscript{v} {$\cong$} 9\textsuperscript{m}.2 of which 4\textsuperscript{m}.7 is estimated to be intrinsic. However, unlike other Wolf-Rayets, this star exhibits strong infrared variability with variations of {$\cong$}1 mag in J, H, K, L, and M over a period of a year. It is suggested that this may be due to an expanding dust envelope.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/ZXEJHVHS/Danks et al. - 1983 - Near infrared spectroscopy and infrared photometry.pdf;/Users/py13je/Zotero/storage/UZ3QVPS8/abstract.html}
+}
+
 @article{das_composition_2011,
   title = {Composition and Evolution of {{Interstellar Grain}} Mantle under the Effects of Photo-Dissociation},
   author = {Das, Ankan and Chakrabarti, Sandip K.},
@@ -722,6 +760,18 @@
   isbn = {978-90-277-1470-1 978-94-009-7910-9},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/DEWPI3LW/De Loore and Willis - 1982 - Wolf-Rayet Stars Observations, Physics, Evolution.pdf}
+}
+
+@misc{delpalacioNonthermalEmissionCollidingwind2021,
+  title = {The Non-Thermal Emission from the Colliding-Wind Binary {{Apep}}},
+  author = {{del Palacio}, S. and Benaglia, P. and De Becker, M. and {Bosch-Ramon}, V. and Romero, G. E.},
+  year = {2021},
+  month = nov,
+  journal = {arXiv e-prints},
+  abstract = {The recently discovered massive binary system Apep is the most powerful synchrotron emitter among the known Galactic colliding-wind binaries. This makes this particular system of great interest to investigate stellar winds and the non-thermal processes associated with their shocks. This source was detected at various radio bands, and in addition the wind-collision region was resolved by means of very-long baseline interferometric observations. We use a non-thermal emission model for colliding-wind binaries to derive physical properties of this system. The observed morphology in the resolved maps allows us to estimate the system projection angle on the sky to be \$\textbackslash psi \textbackslash approx 85\^\textbackslash circ\$. The observed radio flux densities also allow us to characterise both the intrinsic synchrotron spectrum of the source and its modifications due to free--free absorption in the stellar winds at low frequencies; from this we derive mass-loss rates of the stars of \$\textbackslash dot\{M\}\_\textbackslash mathrm\{WN\} \textbackslash approx 4\textbackslash times10\^\{-5\}\$ \$\textbackslash mathrm\{M\}\_\textbackslash odot\$ yr\$\^\{-1\}\$ and \$\textbackslash dot\{M\}\_\textbackslash mathrm\{WC\} \textbackslash approx 2.9\textbackslash times10\^\{-5\}\$ \$\textbackslash mathrm\{M\}\_\textbackslash odot\$ yr\$\^\{-1\}\$. Finally, the broadband spectral energy distribution is calculated for different combinations of the remaining free parameters, namely the intensity of the magnetic field and the injected power in non-thermal particles. We show that the degeneracy of these two parameters can be solved with observations in the high-energy domain, most likely in the hard X-rays but also possibly in \$\textbackslash gamma\$-rays under favourable conditions.},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+  annotation = {ADS Bibcode: 2021arXiv211107442D},
+  file = {/Users/py13je/Zotero/storage/A5FX96YP/del Palacio et al. - 2021 - The non-thermal emission from the colliding-wind b.pdf}
 }
 
 @article{demarcoAbundancesWCCentral2003,
@@ -1030,6 +1080,14 @@
   file = {/Users/py13je/Zotero/storage/EMEQTB52/Girard and Willson - 1987 - Winds in collision. III - Modeling the interaction.pdf}
 }
 
+@misc{gnuplot,
+  title = {Gnuplot 5.4: An Interactive Plotting Program},
+  author = {Williams, Thomas and Kelley, Colin and {many others}},
+  year = {2020},
+  month = jul,
+  keywords = {software}
+}
+
 @article{gobrecht_dust_2016,
   title = {Dust Formation in the Oxygen-Rich {{AGB}} Star {{IK Tauri}}},
   author = {Gobrecht, D. and Cherchneff, I. and Sarangi, A. and Plane, J. M. C. and Bromley, S. T.},
@@ -1252,6 +1310,13 @@
   file = {/Users/py13je/Zotero/storage/7MXEVXUP/Hartquist et al. - 2004 - Blowing Bubbles in the Cosmos Astronomical Winds,.pdf}
 }
 
+@misc{hdf5,
+  title = {Hierarchical Data Format, Version 5},
+  author = {{The HDF Group}},
+  year = {1997},
+  keywords = {software}
+}
+
 @article{heathHabitabilityPlanetsRed1999,
   title = {Habitability of {{Planets Around Red Dwarf Stars}}},
   author = {Heath, Martin J. and Doyle, Laurance R. and Joshi, Manoj M. and Haberle, Robert M.},
@@ -1464,6 +1529,11 @@
   file = {/Users/py13je/Zotero/storage/36P6U5ZK/International Astronomical Union et al. - 1995 - Wolf-Rayet stars binaries, colliding winds, evolu.pdf}
 }
 
+@misc{InternetArchiveDigital,
+  title = {Internet {{Archive}}: {{Digital Library}} of {{Free}} \& {{Borrowable Books}}, {{Movies}}, {{Music}} \& {{Wayback Machine}}},
+  howpublished = {https://archive.org/}
+}
+
 @article{ishiharaGalacticDistributionsCarbon2011,
   title = {Galactic Distributions of Carbon- and Oxygen-Rich {{AGB}} Stars Revealed by the {{AKARI}} Mid-Infrared All-Sky Survey},
   author = {Ishihara, D. and Kaneda, H. and Onaka, T. and Ita, Y. and Matsuura, M. and Matsunaga, N.},
@@ -1609,6 +1679,23 @@
   file = {/Users/py13je/Zotero/storage/M8ENMU3N/Laibe and Price - 2011 - dustybox and dustywave two test problems for nume.pdf}
 }
 
+@inproceedings{lam2015numba,
+  title = {Numba: {{A}} Llvm-Based Python Jit Compiler},
+  booktitle = {Proceedings of the Second Workshop on the {{LLVM}} Compiler Infrastructure in {{HPC}}},
+  author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
+  year = {2015},
+  pages = {1--6},
+  keywords = {software}
+}
+
+@inproceedings{lam2015numba,
+  title = {Numba: {{A}} Llvm-Based Python Jit Compiler},
+  booktitle = {Proceedings of the Second Workshop on the {{LLVM}} Compiler Infrastructure in {{HPC}}},
+  author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
+  year = {2015},
+  pages = {1--6}
+}
+
 @inproceedings{lamberts_colliding_2012,
   title = {Colliding Wind Binaries and {$\gamma$}-Ray Binaries: {{Relativistic}} Version of the {{RAMSES}} Code},
   shorttitle = {Colliding Wind Binaries and {$\gamma$}-Ray Binaries},
@@ -1691,14 +1778,20 @@
 }
 
 @article{lauRevisitingImpactDust2020,
-  title = {Revisiting the {{Impact}} of {{Dust Production}} from {{Wolf-Rayet Binaries}}},
-  author = {Lau, R. and Hankins, M. and Eldridge, J. and Sakon, I. and Williams, P. and {WR DustERS Team}},
+  title = {Revisiting the {{Impact}} of {{Dust Production}} from {{Carbon-rich Wolf}}\textendash{{Rayet Binaries}}},
+  author = {Lau, Ryan M. and Eldridge, J. J. and Hankins, Matthew J. and Lamberts, Astrid and Sakon, Itsuki and Williams, Peredur M.},
   year = {2020},
-  month = jan,
-  volume = {235},
-  pages = {163.01},
-  abstract = {Dust is a key component of the interstellar medium; however, the dominant channels of dust production throughout cosmic time are uncertain. In this talk, I will discuss our analysis revisiting the impact of dust formation in the colliding winds of carbon-rich Wolf-Rayet (WC) binaries. By conducting a dust SED analysis of 19 Galactic WC dust-producers, we find that these sources exhibit a wide range of dust production rates (DPR) from \textasciitilde 10-10 - \textasciitilde 10-5 MSun yr-1. For WC systems with a known orbital period we find a decreasing DPR with increasing orbital period, which highlights the impact on the binary orbital parameters on their dust formation. We incorporate dust production into the Binary Population and Spectral Synthesis (BPASS) models at a range of metallicities to study the relative dust contribution from WC binaries amongst other leading dust input sources such as AGB and RSG stars and supernova ejecta. For a constant star formation history, our results suggest that WC binaries dominate the dust production over AGBs and RSGs. WC binaries notably present an important dust source if supernovae are net destroyers of dust. Lastly, I will discuss our planned JWST DD-ERS program to investigate the formation and chemical composition of dust formed in the archetypal periodic WC binary system WR140.},
-  file = {/Users/py13je/Zotero/storage/32YPDBYZ/[Astrophysics and Space Science Library 412] Jorick S. Vink (eds.) - Very Massive Stars in the Local Universe (2015, Springer International Publishing) - libgen.lc.pdf;/Users/py13je/Zotero/storage/6VJHKU4P/Lau et al. - 2020 - Revisiting the Impact of Dust Production from Wolf.pdf}
+  month = jul,
+  journal = {The Astrophysical Journal},
+  volume = {898},
+  number = {1},
+  pages = {74},
+  publisher = {{American Astronomical Society}},
+  issn = {0004-637X},
+  doi = {10.3847/1538-4357/ab9cb5},
+  abstract = {We present a dust spectral energy distribution (SED) and binary stellar population analysis revisiting the dust production rates (DPRs) in the winds of carbon-rich Wolf\textendash Rayet (WC) binaries and their impact on galactic dust budgets. DustEM SED models of 19 Galactic WC ``dustars'' reveal DPRs of M{$\odot$} yr-1 and carbon dust condensation fractions, {$\chi$}C, between 0.002\% and 40\%. A large (0.1\textendash 1.0 {$\mu$}m) dust grain size composition is favored for efficient dustars where {$\chi$}C {$\greaterequivlnt$} 1\%. Results for dustars with known orbital periods verify a power-law relation between {$\chi$}C, orbital period, WC mass-loss rate, and wind velocity consistent with predictions from theoretical models of dust formation in colliding-wind binaries. We incorporated dust production into Binary Population and Spectral Synthesis (BPASS) models to analyze dust production rates from WC dustars, asymptotic giant branch stars (AGBs), red supergiants (RSGs), and core-collapse supernovae (SNe). BPASS models assuming constant star formation (SF) and a coeval 106 M{$\odot$} stellar population were performed at low, Large Magellanic Cloud (LMC)\textendash like, and solar metallicities (Z = 0.001, 0.008, and 0.020). Both constant SF and coeval models indicate that SNe are net dust destroyers at all metallicities. Constant SF models at LMC-like metallicities show that AGB stars slightly outproduce WC binaries and RSGs by factors of 2\textendash 3, whereas at solar metallicities WC binaries are the dominant source of dust for {$\sim$}60 Myr until the onset of AGBs, which match the dust input of WC binaries. Coeval population models show that, for ``bursty'' SF, AGB stars dominate dust production at late times (t {$\greaterequivlnt$} 70 Myr).},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/KL4Q8LEN/Lau et al. - 2020 - Revisiting the Impact of Dust Production from Carb.pdf}
 }
 
 @misc{lauRevisitingResolvingCarbonrich2020,
@@ -1873,6 +1966,21 @@
   langid = {english},
   keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - Solar and Stellar Astrophysics},
   file = {/Users/py13je/Zotero/storage/IX6B6JWI/Marchenko and Moffat - 2017 - Search for Polycyclic Aromatic Hydrocarbons in the.pdf}
+}
+
+@article{marcoteAUscaleRadioImaging2021,
+  title = {{{AU-scale}} Radio Imaging of the Wind Collision Region in the Brightest and Most Luminous Non-Thermal Colliding Wind Binary {{Apep}}},
+  author = {Marcote, B and Callingham, J R and De Becker, M and Edwards, P G and Han, Y and Schulz, R and Stevens, J and Tuthill, P G},
+  year = {2021},
+  month = feb,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {501},
+  number = {2},
+  pages = {2478--2486},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/staa3863},
+  abstract = {The recently discovered colliding-wind binary (CWB) Apep has been shown to emit luminously from radio to X-rays, with the emission driven by a binary composed of two Wolf\textendash Rayet (WR) stars of one carbon-sequence (WC8) and one nitrogen-sequence (WN4\textendash 6b). Mid-infrared imaging revealed a giant spiral dust plume that is reminiscent of a pinwheel nebula but with additional features that suggest Apep is a unique system. We have conducted observations with the Australian Long Baseline Array to resolve Apep's radio emission on milliarcsecond scales, allowing us to relate the geometry of the wind-collision region to that of the spiral plume. The observed radio emission shows a bow-shaped structure, confirming its origin as a wind-collision region. The shape and orientation of this region is consistent with being originated by the two stars and with being likely dominated by the stronger wind of the WN4\textendash 6b star. This shape allowed us to provide a rough estimation of the opening angle of {$\sim$}150{$\bigcirc$} assuming ideal conditions. The orientation and opening angle of the emission also confirms it as the basis for the spiral dust plume. We also provide estimations for the two stars in the system to milliarcsecond precision. The observed radio emission, one order of magnitude brighter and more luminous than any other known non-thermal radio-emitting CWB, confirms it is produced by an extremely powerful wind collision. Such a powerful wind-collision region is consistent with Apep being a binary composed of two WR stars, so far the first unambiguously confirmed system of its kind.},
+  file = {/Users/py13je/Zotero/storage/ZXR929UN/Marcote et al. - 2021 - AU-scale radio imaging of the wind collision regio.pdf;/Users/py13je/Zotero/storage/MDASK8SV/6039326.html}
 }
 
 @article{mathis_interstellar_nodate,
@@ -2652,6 +2760,22 @@
   file = {/Users/py13je/Zotero/storage/WWBJJIZM/Puls - Diagnostics and Wind-Momentum Luminosity Relation.pdf}
 }
 
+@article{pulsMassLossHot2008,
+  title = {Mass Loss from Hot Massive Stars},
+  author = {Puls, Joachim and Vink, Jorick S. and Najarro, Francisco},
+  year = {2008},
+  month = dec,
+  journal = {The Astronomy and Astrophysics Review},
+  volume = {16},
+  number = {3},
+  pages = {209--325},
+  issn = {1432-0754},
+  doi = {10.1007/s00159-008-0015-8},
+  abstract = {Mass loss is a key process in the evolution of massive stars, and must be understood quantitatively if it is to be successfully included in broader astrophysical applications such as galactic and cosmic evolution and ionization. In this review, we discuss various aspects of radiation driven mass loss, both from the theoretical and the observational side. We focus on developments in the past decade, concentrating on the winds from OB-stars, with some excursions to the winds from Luminous Blue Variables (including super-Eddington, continuum-driven winds), winds from Wolf\textendash Rayet stars, A-supergiants and Central Stars of Planetary Nebulae. After recapitulating the 1-D, stationary standard model of line-driven winds, extensions accounting for rotation and magnetic fields are discussed. Stationary wind models are presented that provide theoretical predictions for the mass-loss rates as a function of spectral type, metallicity, and the proximity to the Eddington limit. The relevance of the so-called bi-stability jump is outlined. We summarize diagnostical methods to infer wind properties from observations, and compare the results from corresponding campaigns (including the VLT-flames survey of massive stars) with theoretical predictions, featuring the mass loss-metallicity dependence. Subsequently, we concentrate on two urgent problems, weak winds and wind-clumping, that have been identified from various diagnostics and that challenge our present understanding of radiation driven winds. We discuss the problems of ``measuring'' mass-loss rates from weak winds and the potential of the NIR Br{$\alpha$}-line as a tool to enable a more precise quantification, and comment on physical explanations for mass-loss rates that are much lower than predicted by the standard model. Wind-clumping, conventionally interpreted as the consequence of a strong instability inherent to radiative line-driving, has severe implications for the interpretation of observational diagnostics, since derived mass-loss rates are usually overestimated when clumping is present but ignored in the analyses. Depending on the specific diagnostics, such overestimates can amount to factors of 2 to 10, and we describe ongoing attempts to allow for more uniform results. We point out that independent arguments from stellar evolution favor a moderate reduction of present-day mass-loss rates. We also consider larger scale wind structure, interpreted in terms of co-rotating interacting regions, and complete this review with a discussion of recent progress on the X-ray line emission from massive stars. Such emission is thought to originate both from magnetically confined winds and from non-magnetic winds, in the latter case related to the line-driven instability and/or clump-clump collisions. We highlight as to how far the analysis of such X-ray line emission can give further clues regarding an adequate description of wind clumping.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/3DR433U6/Puls et al. - 2008 - Mass loss from hot massive stars.pdf}
+}
+
 @article{rauw_phase-resolved_2002,
   title = {Phase-Resolved {{X-ray}} and Optical Spectroscopy of the Massive Binary {{HD}} 93403},
   author = {Rauw, Gr{\'e}gor and Vreux, J-M and Stevens, IR and Gosset, Eric and Sana, Hugues and Jamar, Claude and Mason, KO},
@@ -2929,6 +3053,22 @@
   copyright = {\textcopyright{} ESO, 2014},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/XZYQN69U/See et al. - 2014 - The effects of stellar winds on the magnetospheres.pdf;/Users/py13je/Zotero/storage/NISNKZXD/aa24323-14.html}
+}
+
+@article{shenarWolfRayetBinaries2019,
+  title = {The {{Wolf}}\textendash{{Rayet}} Binaries of the Nitrogen Sequence in the {{Large Magellanic Cloud}}: {{Spectroscopy}}, Orbital Analysis, Formation, and Evolution},
+  shorttitle = {The {{Wolf}}\textendash{{Rayet}} Binaries of the Nitrogen Sequence in the {{Large Magellanic Cloud}}},
+  author = {Shenar, T. and Sablowski, D. P. and Hainich, R. and Todt, H. and Moffat, A. F. J. and Oskinova, L. M. and Ramachandran, V. and Sana, H. and Sander, A. A. C. and Schnurr, O. and {St-Louis}, N. and Vanbeveren, D. and G{\"o}tberg, Y. and Hamann, W.-R.},
+  year = {2019},
+  month = jul,
+  journal = {Astronomy \& Astrophysics},
+  volume = {627},
+  pages = {A151},
+  issn = {0004-6361, 1432-0746},
+  doi = {10.1051/0004-6361/201935684},
+  abstract = {Methods. Spectroscopy was performed using the Potsdam Wolf\textendash Rayet (PoWR) code and cross-correlation techniques. Disentanglement was performed using the code Spectangular or the shift-and-add algorithm. Evolutionary status was interpreted using the Binary Population and Spectral Synthesis (BPASS) code, exploring binary interaction and chemically homogeneous evolution. Results. Among our sample, 28/44 objects show composite spectra and are analyzed as such. An additional five targets show periodically moving WR primaries but no detected companions (SB1); two (BAT99 99 and 112) are potential WR + compact-object candidates owing to their high X-ray luminosities. We cannot confirm the binary nature of the remaining 11 candidates. About two-thirds of the WN components in binaries are identified as cWR, and one-third as hydrogen-burning WR stars. We establish metallicity-dependent mass-loss recipes, which broadly agree with those recently derived for single WN stars, and in which so-called WN3/O3 stars are clear outliers. We estimate that 45 {$\pm$} 30\% of the cWR stars in our sample have interacted with a companion via mass transfer. However, only {$\approx$}12 {$\pm$} 7\% of the cWR stars in our sample naively appear to have formed purely owing to stripping via a companion (12\% b-WR). Assuming that apparently single WR stars truly formed as single stars, this comprises {$\approx$}4\% of the whole LMC WN population, which is about ten times less than expected. No obvious differences in the properties of single and binary WN stars, whose luminosities extend down to log L {$\approx$} 5.2 [L ], are apparent. With the exception of a few systems (BAT99 19, 49, and 103), the equatorial rotational velocities of the OB-type companions are moderate (veq 250 km s-1) and challenge standard formalisms of angular-momentum accretion. For most objects, chemically homogeneous evolution can be rejected for the secondary, but not for the WR progenitor. Conclusions. No obvious dichotomy in the locations of apparently single and binary WN stars on the Hertzsprung-Russell diagram is apparent. According to commonly used stellar evolution models (BPASS, Geneva), most apparently single WN stars could not have formed as single stars, implying that they were stripped by an undetected companion. Otherwise, it must follow that pre-WR mass-loss/mixing (e.g., during the red supergiant phase) are strongly underestimated in standard stellar evolution models.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/ZDTK2YSU/Shenar et al. - 2019 - The Wolf–Rayet binaries of the nitrogen sequence i.pdf}
 }
 
 @article{soulainSPHEREViewWolfRayet2018,
@@ -3257,6 +3397,18 @@
   file = {/Users/py13je/Zotero/storage/BHMFJCR8/Tohline - 2002 - The Origin of Binary Stars.pdf}
 }
 
+@article{tomar2006converting,
+  title = {Converting Video Formats with {{FFmpeg}}},
+  author = {Tomar, Suramya},
+  year = {2006},
+  journal = {Linux Journal},
+  volume = {2006},
+  number = {146},
+  pages = {10},
+  publisher = {{Belltown Media}},
+  keywords = {software}
+}
+
 @book{toro_riemann_2013,
   title = {Riemann Solvers and Numerical Methods for Fluid Dynamics: A Practical Introduction},
   author = {Toro, Eleuterio F},
@@ -3447,6 +3599,15 @@
   file = {/Users/py13je/Zotero/storage/3JHUDPFI/Vink - 2015 - Very Massive Stars in the Local Universe.pdf}
 }
 
+@book{VTK4,
+  title = {The Visualization {{Toolkit}}\textendash{{An}} Object-Oriented Approach to {{3D}} Graphics},
+  author = {Schroeder, Will and Martin, Ken and Lorensen, Bill},
+  year = {2006},
+  edition = {Fourth},
+  publisher = {{Kitware, Inc.}},
+  keywords = {software}
+}
+
 @misc{WACCMAtmosphericChemistry,
   title = {{{WACCM}} | {{Atmospheric Chemistry Observations}} \& {{Modeling}} ({{ACOM}})},
   howpublished = {https://www2.acom.ucar.edu/gcm/waccm},
@@ -3634,6 +3795,22 @@
   file = {/Users/py13je/Zotero/storage/MDPK4FGE/Williams and van der Hucht - 2015 - The colliding-wind WC9+OB system WR 65 and dust fo.pdf;/Users/py13je/Zotero/storage/J6JBVM8T/abstract.html}
 }
 
+@article{williamsCondensationShellHD1978,
+  title = {Condensation of a Shell around {{HD}} 193793.},
+  author = {Williams, P. M. and Beattie, D. H. and Lee, T. J. and Stewart, J. M. and Antonopoulou, E.},
+  year = {1978},
+  month = nov,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {185},
+  pages = {467--472},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/185.3.467},
+  abstract = {Summary. Infrared photometry of the Wolf-Rayet binary HD 193793 shows that grains condensed in its circumstellar shell between 1976 June and 1977 August. The observations can be fitted by an optically thin shell of 4 x 1 O-8M@ of graphite grains at a temperature of about 900 K. A spectrum in the 2- m atmospheric window reveals an emission feature near 2.04 m. We have found the same feature in the W-R system 2 Vel and provisionally ascribe it to the 2.058- m He iline.},
+  keywords = {Circumstellar Shells:Wolf-Rayet Stars,Infrared Photometry:Wolf-Rayet Stars},
+  annotation = {ADS Bibcode: 1978MNRAS.185..467W},
+  file = {/Users/py13je/Zotero/storage/MKAHMGQM/Williams et al. - 1978 - Condensation of a shell around HD 193793..pdf}
+}
+
 @article{williamsConditionsWR1402021,
   title = {Conditions in the {{WR}}~140 Wind-Collision Region Revealed by the 1.083-{$\mu$}\,m {{He}}\,i Line Profile},
   author = {Williams, Peredur M and Varricatt, Watson P and Chen{\'e}, Andr{\'e}-Nicolas and Corcoran, Michael F and Gull, Ted R and Hamaguchi, Kenji and Moffat, Anthony F J and Pollock, Andrew M T and Richardson, Noel D and Russell, Christopher M P and Sander, Andreas A C and Stevens, Ian R and Weigelt, Gerd},
@@ -3768,6 +3945,21 @@
   file = {/Users/py13je/Zotero/storage/NF58LN3M/Williams and van der Hucht - 2000 - Spectroscopy of WC9 Wolf-Rayet stars a search for.pdf}
 }
 
+@article{williamsVariableDustEmission2019,
+  title = {Variable Dust Emission by {{WC}} Type {{Wolf}}\textendash{{Rayet}} Stars Observed in the {{NEOWISE-R}} Survey},
+  author = {Williams, P M},
+  year = {2019},
+  month = sep,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {488},
+  number = {1},
+  pages = {1282--1300},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stz1784},
+  abstract = {Photometry at 3.4 and 4.6 \$\{\textbackslash mu m\}\$ of 128 Population~I WC type Wolf\textendash Rayet stars in the Galaxy and 12 in the Large Magellanic Cloud (LMC) observed in the WISE NEOWISE-R survey was searched for evidence of circumstellar dust emission and its variation. Infrared spectral energy distributions (SEDs) were assembled, making use of archival r, i, Z, and Y photometry to determine reddening and stellar wind levels for the WC stars found in recent IR surveys and lacking optical photometry. From their SEDs, 10 apparently non-variable stars were newly identified as dust makers, including three, WR\,102-22, WR\,110-10, and WR\,124-10, having subtype earlier than WC8\textendash 9, the first such stars to show this phenomenon. The 11 stars found to show variable dust emission include six new episodic dust makers, WR\,47c, WR\,75-11, WR\,91-1, WR\,122-14, and WR\,125-1 in the Galaxy and HD 38030 in the LMC. Of previously known dust makers, NEOWISE-R photometry of WR\,19 captured its rise to maximum in 2018 confirming the 10.1-yr period, that of WR\,125 the beginning of a new episode of dust formation suggesting a period near 28.3~yr. while that of HD 36402 covered almost a whole period and forced revision of it to 5.1~yr.},
+  file = {/Users/py13je/Zotero/storage/43VX3KCA/Williams - 2019 - Variable dust emission by WC type Wolf–Rayet stars.pdf;/Users/py13je/Zotero/storage/7C9TBECL/5526235.html}
+}
+
 @article{williamsWR140Infrared2011,
   title = {{{WR}} 140 in the {{Infrared}}},
   author = {Williams, Peredur},
@@ -3809,6 +4001,37 @@
   abstract = {WR 118 is a highly evolved Wolf-Rayet star of the WC10 subtype surrounded by a permanent dust shell absorbing and re-emitting in the infrared a considerable fraction of the stellar luminosity. We present the first diffraction-limited 2.13 \textmu m speckle interferometric observations of WR 118 with 73 mas resolution. The speckle interferograms were obtained with the 6 m telescope at the Special Astrophysical Observatory. The twodimensional visibility function of the object does not show any significant deviation from circular symmetry. The visibility curve declines towards the diffraction cut-off frequency to {$\sim$}0.66 and can be approximated by a linear function. Radiative transfer calculations have been carried out to model the spectral energy distribution, given in the range of 0.5\textendash 25 \textmu m, and our 2.13 \textmu m visibility function, assuming spherical symmetry of the dust shell. Both can be fitted with a model containing double-sized grains (``small'' and ``large'') with the radii of a = 0.05 \textmu m and 0.38 \textmu m, and a mass fraction of the large grains greater than 65\%. Alternatively, a good match can be obtained with the grain size distribution function n(a) {$\sim$} a-3, with a ranging between 0.005 \textmu m and 0.6 \textmu m. At the inner boundary of the modelled dust shell (angular diameter {$\Theta$}in = (17{$\pm$}1) mas), the temperature of the smallest grains and the dust shell density are 1750 K {$\pm$} 100 K and (1 {$\pm$} 0.2) \texttimes{} 10-19 g/cm3, respectively. The dust formation rate is found to be (1.3 {$\pm$} 0.5) \texttimes{} 10-7 M /yr, assuming Vwind = 1200 km s-1.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/BS6KR84G/Yudin et al. - 2001 - Speckle interferometry and radiative transfer mode.pdf}
+}
+
+@article{zhekovChandraRevisitsWR2022,
+  title = {Chandra~Revisits {{WR}}~48a: Testing Colliding Wind Models in Massive Binaries},
+  shorttitle = {Chandra~Revisits {{WR}}~48a},
+  author = {Zhekov, Svetozar A and Gagn{\'e}, Marc and Skinner, Stephen L},
+  year = {2022},
+  month = feb,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {510},
+  number = {1},
+  pages = {1278--1288},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stab3469},
+  abstract = {We present results of new Chandra~High-Energy Transmission Grating (HETG) observations (2019 November\textendash December) of the massive Wolf\textendash Rayet binary WR~48a. Analysis of these high-quality data showed that the spectral lines in this massive binary are broadened (full width at half-maximum, FWHM ~=~1400~km s-1) and marginally blueshifted ({$\sim-$}100~km s-1). A direct modelling of these high-resolution spectra in the framework of the standard colliding stellar wind (CSW) picture provided a very good correspondence between the shape of the theoretical and observed spectra. Also, the theoretical line profiles are in most cases an acceptable representation of the observed ones. We applied the CSW model to the X-ray spectra of WR~48a~from previous observations: Chandra-HETG (2012 October) and XMM\textendash Newton~(2008 January). From this expanded analysis, we find that the observed X-ray emission from WR~48a~is variable on the long time-scale (years) and the same is valid for its intrinsic X-ray emission. This requires variable mass-loss rates over the binary orbital period. The X-ray absorption (in excess of that from the stellar winds in the binary) is variable as well. We note that lower intrinsic X-ray emission is accompanied by higher X-ray absorption. A qualitative explanation could be that the presence of clumpy and non-spherically symmetric stellar winds may play a role.},
+  file = {/Users/py13je/Zotero/storage/A5IHM9QL/Zhekov et al. - 2022 - Chandra revisits WR 48a testing colliding wind mo.pdf;/Users/py13je/Zotero/storage/PKBXJQ5K/6448489.html}
+}
+
+@article{zhekovMultiwavelengthViewDusty2014,
+  title = {A Multiwavelength View on the Dusty {{Wolf}}\textendash{{Rayet}} Star {{WR}}~48a},
+  author = {Zhekov, Svetozar A. and Tomov, Toma and Gawronski, Marcin P. and Georgiev, Leonid N. and Borissova, Jura and Kurtev, Radostin and Gagn{\'e}, Marc and Hajduk, Marcin},
+  year = {2014},
+  month = dec,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {445},
+  number = {2},
+  pages = {1663--1678},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stu1880},
+  abstract = {We present results from the first attempts to derive various physical characteristics of the dusty Wolf\textendash Rayet (WR) star WR~48a based on a multiwavelength view of its observational properties. This is done on the basis of new optical and near-infrared spectral observations and on data from various archives in the optical, radio and X-rays. The optical spectrum of WR~48a is acceptably well represented by a sum of two spectra: of a WR star of the WC8 type and of a WR star of the WN8h type. The strength of the interstellar absorption features in the optical spectra of WR~48a and the near-by stars D2-3 and D2-7 (both members of the open cluster Danks~2) indicates that WR~48a is located at a distance of~{$\sim$}4~kpc from us. WR~48a is very likely a thermal radio source and for such a case and smooth (no clumps) wind its radio emission suggests a relatively high mass-loss rate of this dusty WR star (\$\textbackslash dot\{M\} \textbackslash approx \textbackslash mbox\{a few\} \textbackslash times 10\^\{-4\}\$~M{$\odot~$}yr-1). Long time-scale (years) variability of WR~48a is established in the optical, radio and X-rays. Colliding stellar winds likely play a very important role in the physics of this object. However, some luminous blue variable like activity could not be excluded as well.},
+  file = {/Users/py13je/Zotero/storage/9WI8GEAG/Zhekov et al. - 2014 - A multiwavelength view on the dusty Wolf–Rayet sta.pdf;/Users/py13je/Zotero/storage/DPCW6Q44/1415154.html}
 }
 
 @article{zingale_pyro_2013,
